# qwebpa

./: CMakeLists.txt
src/: CMakeLists.txt  qwebphandler.cpp  qwebphandler_p.h
test/: CMakeLists.txt  tst_qwebp.cpp  webp.qrc
